# easy_db

./: .gitignore  Cargo.toml  README.md  client.http  start_db_system.bat  start_db_system.sh
src/api_gateway/: main.rs
src/api_gateway/http_handlers/: mod.rs
src/raft_node/: main.rs
src/utils/: consts.rs
